objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Country_English__c</fullName>
        <description>Lead Address Country, used for non-English profiles</description>
        <label>Country (English)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BONAIRE, SINT EUSTATIUS AND SABA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreatedByName__c</fullName>
        <description>Created as part of P360 Sep '12 Release.
Hold the Full Name of the Standard System field  "Created By" for Gadget.</description>
        <formula>CreatedBy.FirstName &amp; " " &amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomCity__c</fullName>
        <description>Lead Address City</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomCountry__c</fullName>
        <description>Lead Address Country</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BONAIRE, SINT EUSTATIUS AND SABA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomState__c</fullName>
        <description>Lead Address State/Province</description>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomZip__c</fullName>
        <description>Lead Address Zip/Postal Code</description>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Intelligence__c</fullName>
        <formula>IF( NOT ISNULL( End_Customer_Account__c ) &amp;&amp; NOT ISNULL(End_Customer_Account__r.CI_Last_Updated_Date__c),  HYPERLINK("../"&amp;End_Customer_Account__c,   $Label.Prm_customIntelligence  , "_parent") ,  "" )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Intelligence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Moment_ID__c</fullName>
        <label>Customer Moment ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Moment__c</fullName>
        <label>Customer Moment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Risk_If_Not_Refreshed__c</fullName>
        <description>Compelling Reason To Buy</description>
        <label>Customer Risk If Not Refreshed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRT_Lead__c</fullName>
        <formula>IF
((
NOT
(
ISBLANK 
(TEXT(DRT_Main_Stage__c)))
&amp;&amp;
(
NOT
(TEXT
(DRT_Main_Stage__c) == 'Not a DRT Lead' ||  TEXT(DRT_Sub_Stage__c) == '0B - Send to DMT'))),True,False)</formula>
        <label>DRT Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRT_Main_Stage__c</fullName>
        <description>Capture DRT Main Stage</description>
        <label>DRT Main Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not a DRT Lead</fullName>
                </value>
                <value>
                    <fullName>Stage 0 Nurture</fullName>
                </value>
                <value>
                    <fullName>Stage 1 DRT Opportunity Identified</fullName>
                </value>
                <value>
                    <fullName>Stage 2 Partner / DOM Engaged with Customer</fullName>
                </value>
                <value>
                    <fullName>Stage 3 Proposal / Quote</fullName>
                </value>
                <value>
                    <fullName>Stage 4 Pricing / Agreement</fullName>
                </value>
                <value>
                    <fullName>Stage_5_Won _Lost_Cancelled</fullName>
                    <label>Stage 5 Won	/ Lost / Cancelled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRT_PSR_Name__c</fullName>
        <label>DRT PSR Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRT_Routed_To__c</fullName>
        <formula>IF(AND(ISPICKVAL( DRT_Main_Stage__c , "Stage 0 Nurture"),
        ISPICKVAL( DRT_Sub_Stage__c , "0A - DRR to Follow-Up") ),"DRR",
IF(AND(ISPICKVAL( DRT_Main_Stage__c , "Stage 0 Nurture"),
        ISPICKVAL( DRT_Sub_Stage__c , "0B - Send to DMT") ),"DMT",
IF(AND(ISPICKVAL( DRT_Main_Stage__c , "Stage 1 DRT Opportunity Identified"),
        ISPICKVAL( DRT_Sub_Stage__c , "1A - Sent to Partner") ),"Partner",
IF(AND(ISPICKVAL( DRT_Main_Stage__c , "Stage 1 DRT Opportunity Identified"),
        ISPICKVAL( DRT_Sub_Stage__c , "1B - Sent to DOM") ),"DOM",
IF(AND(ISPICKVAL( DRT_Main_Stage__c , "Stage 1 DRT Opportunity Identified"),
        ISPICKVAL( DRT_Sub_Stage__c , "1C - Partner Admin assigned to PSR") ),"Partner",
IF(AND(ISPICKVAL( DRT_Main_Stage__c , "Stage 1 DRT Opportunity Identified"),
        ISPICKVAL( DRT_Sub_Stage__c , "1D - Warm Hand Off to Sales") ),"Sales",
IF(AND(ISPICKVAL( DRT_Main_Stage__c , "Stage 2 Partner / DOM Engaged with Customer"),
        ISPICKVAL( DRT_Sub_Stage__c , "2A - PSR engaged with Customer") ),"Partner",
IF(AND(ISPICKVAL( DRT_Main_Stage__c , "Stage 2 Partner / DOM Engaged with Customer"),
        ISPICKVAL( DRT_Sub_Stage__c , "2B - DOM engaged with Customer") ),"DOM",
IF(AND(ISPICKVAL( DRT_Main_Stage__c , "Stage 2 Partner / DOM Engaged with Customer"),
        ISPICKVAL( DRT_Sub_Stage__c , "2C - Warm transfer to AM") ),"AM" ,
IF(AND(ISPICKVAL( DRT_Main_Stage__c , "Stage 2 Partner / DOM Engaged with Customer"),
        ISPICKVAL( DRT_Sub_Stage__c , "2D - Nurture by DOM/DRR") ),"DOM/DRR" ,
IF(ISPICKVAL( DRT_Main_Stage__c , "Stage 3 Proposal / Quote"), "Partner" ,
IF(ISPICKVAL( DRT_Main_Stage__c , "Stage 4 Pricing / Agreement"), "Partner" ,
IF(AND(ISPICKVAL( DRT_Main_Stage__c , "Stage_5_Won _Lost_Cancelled"),
        ISPICKVAL( DRT_Sub_Stage__c , "5A_Won") ),"Partner" ,
IF(AND(ISPICKVAL( DRT_Main_Stage__c , "Stage_5_Won _Lost_Cancelled"),
        ISPICKVAL( DRT_Sub_Stage__c , "5B_Lost") ),"Partner",
IF(AND(ISPICKVAL( DRT_Main_Stage__c , "Stage_5_Won _Lost_Cancelled"),
        ISPICKVAL( DRT_Sub_Stage__c , "5C_Cancelled") ),"Partner" ,
IF(AND(ISPICKVAL( DRT_Main_Stage__c , "Stage_5_Won _Lost_Cancelled"),
        ISPICKVAL( DRT_Sub_Stage__c , "5D_Long Sales Cycle") ),"DRT/DMT",""
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)</formula>
        <label>Opportunity With</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRT_Sub_Stage__c</fullName>
        <description>Capture the DRT Sub Stage</description>
        <label>DRT Sub Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DRT_Main_Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0A - DRR to Follow-Up</fullName>
                </value>
                <value>
                    <fullName>0B - Send to DMT</fullName>
                </value>
                <value>
                    <fullName>1A - Sent to Partner</fullName>
                </value>
                <value>
                    <fullName>1B - Sent to DOM</fullName>
                </value>
                <value>
                    <fullName>1C - Partner Admin assigned to PSR</fullName>
                </value>
                <value>
                    <fullName>1D - Warm Hand Off to Sales</fullName>
                </value>
                <value>
                    <fullName>2A - PSR engaged with Customer</fullName>
                </value>
                <value>
                    <fullName>2B - DOM engaged with Customer</fullName>
                </value>
                <value>
                    <fullName>2C - Warm transfer to AM</fullName>
                </value>
                <value>
                    <fullName>2D - Nurture by DOM/DRR</fullName>
                </value>
                <value>
                    <fullName>5A_Won</fullName>
                    <label>5A - Won</label>
                </value>
                <value>
                    <fullName>5B_Lost</fullName>
                    <label>5B - Lost</label>
                </value>
                <value>
                    <fullName>5C_Cancelled</fullName>
                    <label>5C - Cancelled</label>
                </value>
                <value>
                    <fullName>5D_Long Sales Cycle</fullName>
                    <label>5D - Long Sales Cycle</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <description>DUNS Number for the Associated Record</description>
        <label>DUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Profiling_Vendor__c</fullName>
        <description>NGCC Phase1:Vendor  verifed the data</description>
        <label>Data Profiling Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Source_Name__c</fullName>
        <description>Source of contact data selected in UNICA tool.
Domain values:
CISCO-INTERNAL
RENTED
PARTNER OWNED</description>
        <label>Data Source Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datasource__c</fullName>
        <description>NGCC Phase1:Source of the Data</description>
        <label>Datasource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Added__c</fullName>
        <description>Formula field used to convert partner added date/time to date. Used in SCP communities</description>
        <formula>DATEVALUE( Partner_Assigned_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_in_eLeads__c</fullName>
        <description>Currently NOT Used (Last usage Dec -2007)</description>
        <label>Date Received in eLeads</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Taken_by_xAM_to_Accept_Lead__c</fullName>
        <description>Days Taken by xAM to Accept Lead</description>
        <formula>Latest_Lead_Acceptance_Date__c - Lead_Assignment_Date__c</formula>
        <label>Days Taken by xAM to Accept Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Taken_to_Actively_Working__c</fullName>
        <description>Days taken by the partner to move the lead from Partner Assigned to Actively working status.</description>
        <formula>IF( 
ISBLANK(Partner_Actively_Working_Date__c), 
NULL, 
(Partner_Actively_Working_Date__c - Partner_Assigned_Date__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Taken to Actively Working</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Taken_to_Close_Lead__c</fullName>
        <description>Number of days taken to close(Convert/Reject) lead after accepting the lead.</description>
        <formula>Lead_Closed_Date__c - Latest_Lead_Acceptance_Date__c</formula>
        <label>Days Taken to Close Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Waiting_for_PSR_Assignment__c</fullName>
        <description>Running count of days that a lead has no PSR after Partner Assignment</description>
        <formula>IF(
(ISBLANK(PSR_Assigned_Date__c) &amp;&amp; NOT (ISBLANK(Partner_Assigned_Date__c))),
(NOW() - Partner_Assigned_Date__c),
NULL
)</formula>
        <label>Days Waiting for PSR Assignment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Qualify_Reject__c</fullName>
        <description>PLOC- Calculates # of days it took partner to reject the lead.
Partner_Qualified_Rejected_Date_Time__c - Partner_Assigned_Date_Time__c
Field label is changed. Its previous label was "Days to Qualify/Reject". 
API name still reflects the old name.</description>
        <formula>Partner_Qualified_Rejected_Date_Time__c - Partner_Assigned_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TO_BE_DELETED_Days to Confirm/Reject</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Create_Date_Time__c</fullName>
        <description>Created as part of P360 Sep '12 Release.
Date/Time when the deal id was assigned to the lead.</description>
        <label>Deal Create Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deal_Create_Date__c</fullName>
        <description>Release: P360 March 2013 
Purpose: CCW Field - Stores Deal Created Date for the associated deal which was created from lead</description>
        <label>Deal Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Expiration_Date__c</fullName>
        <description>Release: P360 March 2013 
Purpose: CCW Field - Stores Deal Expiration Date for the associated deal which was created from lead</description>
        <label>Deal Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <description>Created as part of P360 Sep '12 Release. 
Creating Deal id field for Populating the deal's id which is created in ccw application when a Lead is converted into an DEAL.</description>
        <inlineHelpText>Auto-generated if you utilize L&amp;P's integration with CCW for registering deals. If you did not use this capability, provide us an (optional) deal ID if you have it.</inlineHelpText>
        <label>CCW Deal ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DedupeRecord__c</fullName>
        <label>DedupeRecord</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dedupe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeduperProcessing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DeduperProcessing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Degree_Of_Commit_Category__c</fullName>
        <label>Degree Of Commit Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_Of_Commitment__c</fullName>
        <label>Degree Of Commitment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment_No__c</fullName>
        <defaultValue>$User.Deployment_No__c</defaultValue>
        <description>IS uses Deployment No 99 to indicate records related to IS org.
Initially used by IT data migration to indicate Deployment No when the leads were migrated.</description>
        <label>Deployment No</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Copy of Description will be used to set value of description field in opportunity object.</description>
        <label>Description Copy</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <description>Release: P360 March 2013 
Purpose: CCW Field - Stores Discount type for the associated deal which was created from lead</description>
        <label>Discount Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition_Sub_Type__c</fullName>
        <label>Sub-Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Outcome__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Contacted via Email</fullName>
                </value>
                <value>
                    <fullName>Contacted via Phone</fullName>
                </value>
                <value>
                    <fullName>Contacted via Email &amp; Phone</fullName>
                </value>
                <value>
                    <fullName>Has a Partner</fullName>
                </value>
                <value>
                    <fullName>E-commerce</fullName>
                </value>
                <value>
                    <fullName>Unknown-Other Reason Provided</fullName>
                </value>
                <value>
                    <fullName>Consultant did not disclose end user contact info</fullName>
                </value>
                <value>
                    <fullName>Before Convo</fullName>
                </value>
                <value>
                    <fullName>Provided General Product info</fullName>
                </value>
                <value>
                    <fullName>General Product info (Data sheets-Compatability Info-Part Numbers)</fullName>
                </value>
                <value>
                    <fullName>Residential Support</fullName>
                </value>
                <value>
                    <fullName>Duplicate Prospect</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>IT Outsource</fullName>
                </value>
                <value>
                    <fullName>No longer with Company</fullName>
                </value>
                <value>
                    <fullName>Not Fit Wrong Contact</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Sent to AM</fullName>
                </value>
                <value>
                    <fullName>Sent to BDR</fullName>
                </value>
                <value>
                    <fullName>Sent to LDR</fullName>
                </value>
                <value>
                    <fullName>Sent to Partner</fullName>
                </value>
                <value>
                    <fullName>Sent to VSS</fullName>
                </value>
                <value>
                    <fullName>Long Billing Cycle</fullName>
                </value>
                <value>
                    <fullName>Not in purchasing cycle (Evaluating Vendor-Solution)</fullName>
                </value>
                <value>
                    <fullName>Project Not yet Initiated-Requested Follow Up Info</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>GVE-Partner Support</fullName>
                </value>
                <value>
                    <fullName>Licensing (TAC)</fullName>
                </value>
                <value>
                    <fullName>Order &amp; Billing</fullName>
                </value>
                <value>
                    <fullName>Other Cisco Dept</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disti_SO_Number__c</fullName>
        <inlineHelpText>Please provide a Disti Sales Order #, if available. This is an optional field.</inlineHelpText>
        <label>Disti SO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Name__c</fullName>
        <description>Nov 13 Release: This is to store the distributor name when the lead is closed by distrubutor</description>
        <inlineHelpText>Required if “Closed-Order Through Disti” is selected. Please provide the name of the Distributor who will be fulfilling your order.</inlineHelpText>
        <label>Distributor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Prevention__c</fullName>
        <description>Field populated by workflow on lead creation to prevent duplicate external Lead creation.</description>
        <label>Duplicate Prevention</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ELQ_UMO_Program_Name__c</fullName>
        <label>ELQ UMO Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETL_Load_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ETL Load Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligible_NS__c</fullName>
        <description>Release: P360 March 2013 
Purpose: CCW Field - Flag to Store Eligibility of Non Standard Deal</description>
        <label>Eligible for Non-Standard</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Asset_Id__c</fullName>
        <label>Eloqua Asset Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_CC_Id__c</fullName>
        <label>Eloqua Common Campaign Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Drive_To_ID__c</fullName>
        <label>Eloqua Drive To ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Landing_Page_Lang__c</fullName>
        <description>Creating field to capture Eloqua Landing page Language.</description>
        <label>Eloqua Landing Page Lang</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Offer_Id__c</fullName>
        <label>Eloqua Offer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Step_Name__c</fullName>
        <label>Eloqua Step Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Updates__c</fullName>
        <defaultValue>"No"</defaultValue>
        <description>Eloqua March 2015: Flag to keep track of recent update was made by Eloqua</description>
        <externalId>true</externalId>
        <label>Eloqua Updates</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Permission_Date__c</fullName>
        <description>NGCC Phase1:Date when the email permission was received</description>
        <label>Email Permission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Permission__c</fullName>
        <description>NGCC Phase1:Permission to email for marketing offers/promotion</description>
        <label>Email Permission</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <description>Email Status - Valid/InValid/Null</description>
        <label>Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>InValid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emailed_Receive_Date_Time__c</fullName>
        <label>Emailed Receive Date_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Customer_Account_Migrate_Id__c</fullName>
        <description>Field used to populate End Customer Account lookup field from an external system.</description>
        <label>End Customer Account Migrate Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Account_Name__c</fullName>
        <formula>End_Customer_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Customer Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of P360 Sep '12 Release. 
Look Up to End Customer Account.</description>
        <label>End Customer Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2)</booleanFilter>
            <errorMessage>The selected Account is not a valid End Customer Account.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>End-User</value>
            </filterItems>
            <filterItems>
                <field>Account.OwnerId</field>
                <operation>notEqual</operation>
                <value>00530000000yzog,00580000001Un7V,0053000000109nk,00530000000z0wq,00580000003Xh5f,00530000000xtmN,00530000001ADkn,00530000000xcnT,00580000003Ftxq,00530000000zZBB,00530000000zZB5,00580000001URNM,00530000000dKAp,00530000000fYnT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (End Customer Account)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Customer_Id__c</fullName>
        <formula>End_Customer_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Score__c</fullName>
        <inlineHelpText>Contact's Engagement Score</inlineHelpText>
        <label>Engagement Score</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Deal_Value_USD__c</fullName>
        <description>Release: FY15OCT
Purpose: Real dollar amount for use by external PA/PSR users since the existing Expected Total List Amount is stored in thousands</description>
        <formula>ProductAmount__c +  ServicesAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Deal Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Product_Amount_USD__c</fullName>
        <description>Release: FY15OCT
Purpose: Real dollar amount for use by external PA/PSR users since the existing Expected Product List Amount is stored in thousands</description>
        <label>Estimated Product Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Service_Amount_USD__c</fullName>
        <description>Release: FY15OCT 
Purpose: Real dollar amount for use by external PA/PSR users since the existing Expected Service List Amount is stored in thousands</description>
        <label>Estimated Service Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>